--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9FR7K2YVNR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9FR7K2YVNR'); </script>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Search</title>
@@ -10,31 +9,63 @@
 		<link href="/src/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
 		<link href="/src/css/signin.css" rel="stylesheet">
+		<script src="/src/js/jquery.min.js"></script>
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="/index/" method="post">
+		<form class="form-signin">
             {%csrf_token%}
 			<img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="288" height="108">
 			<!--h1 class="h3 mb-3 font-weight-normal" style="margin-left: -15%; margin-right: -15%;">Please enter the author's name</h1-->
             <br />
-            <br />
+			<p id="error" style="color: red"></p>
             <div style="float: left; margin-right: 0px; width: 90%; margin-left: -105%; margin-bottom: 10%;">
                 <select name="field">
-                    <option value="vis">Visualization</option>
+                    <option value="visualization">Visualization</option>
+					<option value="acl">Natural Language Processing</option>
                 </select>
             </div>
             <div style="float: right; width: 200%; margin-left: 0px; margin-right: -85%; margin-bottom: 10%;">
-                <input name="author" type="text" class="form-control" placeholder="Please enter the author's name" required="" autofocus="" style="height: 38px; border-left: none;">
+                <input name="name" type="text" class="form-control" placeholder="Please enter the author's name" required="" autofocus="" style="height: 38px; border-left: none;">
             </div>
-            <div style="margin-left: -20%; margin-right: -20%; margin-bottom: 10%;">
-				<label>
-                    <input type="checkbox" value="1" name="partial_match" checked> partial match
-                </label>
-                <a href="/showlist/" style="margin-left: 5%;">the ranked scholar list in visualization</a>
+            <div style="margin-bottom: 10%;">
+                <a id="scholarListLink" href=" " style="margin-left: 5%;">the ranked scholar list</a>
+				<script>
+					$("select").change(function(event) {
+						event.preventDefault();
+						var field = $("select").val();
+						console.log(field);
+						$("#scholarListLink").attr("href", "list/?field=" + field);
+					})
+				</script>
 			</div>
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
-			<p class="mt-5 mb-3 text-muted">© 2022-2023</p>
+			<button class="btn btn-lg btn-primary btn-block">Search</button>
+			<p class="mt-5 mb-3 text-muted">© 2023-2024</p>
+			<p class="mt-5 mb-3 text-muted">京ICP备2022000473号-2</p>
 		</form>
+		<script type="text/javascript">
+			$(function() {
+				$("#scholarListLink").attr("href", "list/?field=" + $("select").val());
+			});
+			window.addEventListener('popstate', function(event) {
+				// 页面回退时执行这段代码
+				$("#scholarListLink").attr("href", "list/?field=" + $("select").val());
+			});
+			$("button").click(function(event) {
+				event.preventDefault();		// form表单当button在里面时，会默认发送GET请求
+				var formData = $(".form-signin").serialize();
+				console.log(formData);
+				$.ajax({
+					type: "POST",
+					url: "/list/",
+					dataType: "json",
+					data: formData,
+					success: function(param) {
+						console.log(param['error']);
+						$("#error").text(param['error']);
+					}
+				});
+			})
+		</script>
 	</body>
 </html>
