--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -42,7 +42,7 @@ select {
 
 .form-signin {
     width: 100%;
-    max-width: 330px;
+    /* max-width: 600px; */
     padding: 15px;
     margin: 0 auto;
 }
