--- a/templates/list.html
+++ b/templates/list.html
@@ -6,35 +6,29 @@
     <link rel="icon" href="/src/image/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/src/css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link href="/src/css/bootstrap-table.css" rel="stylesheet">
     <link href="/src/css/style.css" rel='stylesheet' type='text/css' />
 
     <script src="/src/js/jquery.min.js"></script>
     <script src="/src/js/bootstrap.js"></script>
-    <script src="/src/js/bootstrap.bundle.js"></script>
-    <script src="/src/js/bootstrap-table.js"></script>
-
-    <script src="/src/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="/src/css/jquery.dataTables.min.css">
 </head>
 
 <body>
     <div class="container-fluid" style="min-height: 100vh; background-color: #cedfe6">
-        <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); margin-right: -1%; margin-left: -1%; padding-bottom: 2%; padding-top: 2%;">
+        <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-bottom: 2%; padding-top: 2%;">
             <div class="logo" style="margin-left: 8%;">
                 <!--h1><span>G</span>eneticFlow</h1-->
                 <img src="/src/image/logo-index.jpg" width="324" height="72">
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="banner-info" style="margin-left: 8%; margin-right: 4%;">
-            <div style="float: left; width: 100%;">
-                <table id="table" class="table table-striped table-bordered" style="background-color: #dddddd;">
+        <div class="banner-info" style="margin-left: 8%;">
+            <div style="float: left; width: 95%;">
+                <table class="table">
                     <thead>
                         <tr>
                             <th>rank</th>
                             <th>Author Name</th>
-                            <th>Paper Count</th>
+                            <th class="asc">Paper Count</th>
                             <th>Citation Count</th>
                             <th>h-index</th>
                             <th></th>
@@ -63,16 +57,50 @@
     </div>
 
     <script>
-        $(document).ready(function() {
-            
-            $("#table").DataTable({
-                "order": [[0, 'asc']], // 默认按第一列升序排序
-                "columnDefs": [
-                    { "orderable": false, "targets": [5] } // 第一列不可排序
-                ]
+        // $("#scholars").DataTable({
+        //     "order": [[1, 'desc']], // 默认按第一列升序排序
+        //     "columnDefs": [
+        //         { "orderable": false, "targets": [4] } // 第一列不可排序
+        //     ]
+        // });
+        function compare(index, sortType) {
+            console.log(index, sortType);
+            return function(row1, row2) {
+                var aValue = row1[index];
+                    bValue = row2[index];
+                if (index == "name") {
+                    if (sortType == 'asc') return aValue > bValue ? 1 : aValue < bValue ? -1 : 0;
+                    else return aValue > bValue ? -1 : aValue < bValue ? 1 : 0;
+                }
+                else {
+                    aValue = parseInt(aValue);
+                    bValue = parseInt(bValue);
+                    return sortType == 'desc' ? aValue - bValue : bValue - aValue;
+                }
+            }
+        }
+        $(function () {
+            $('table').on('click', 'th', function () {
+                var index = $(this).index();
+                if (index != 0) {
+                    const indexLabel = ["unamed", "name", "paperCount", "citationCount", "hIndex"];
+                    var thClass = $(this).hasClass('asc') ? 'desc' : 'asc',
+                        scholarList = {{ scholarList|safe }},
+                        fieldType = "{{ field }}";
+                    scholarList.sort(compare(indexLabel[index], thClass));
+
+                    $('table th').removeClass('asc desc');
+                    $(this).addClass(thClass);
+
+                    $('table tbody').empty();
+                    for (let i = 0; i < scholarList.length; i++) {
+                        scholarList[i]["rank"] = i + 1;
+                        var content = "<tr><td>" + scholarList[i]["rank"] + "</td><td>" + scholarList[i]["name"] + "</td><td>" + scholarList[i]["paperCount"] + "</td><td>" + scholarList[i]["citationCount"] + "</td><td>" + scholarList[i]["hIndex"] + "</td><td><a class=\"btn-sm btn-primary\" href=\"/index?field=" + fieldType + "&id=" + scholarList[i]["authorRank"] + "\" style=\"font-size: 2px;\">Visualize</a></td></tr>";
+                        $('table tbody').append(content);
+                    }
+                }
             });
         });
-        
     </script>
 </body>
 </html>
