--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,7 +71,7 @@ ul.address li ul.address-text li {
     display: inline-block;
     font-size: 1em;
     color: #fff;
-    margin-top: 1em;
+    margin-top: 0.7em;
 	font-weight: 400;
 }
 ul.address li ul.address-text li button {
@@ -122,7 +122,8 @@ ul.address-text p {
 	border-radius: 5px;
 	transition: background-color 0.3s ease-in-out;
 	overflow: hidden;
-	margin-left: 40%;
+	/* margin-left: 40%; */
+	right: 24%;
 }
 
 #toolbox::before {
@@ -191,7 +192,7 @@ tr:hover {
 }
 
 /* 滚动槽 */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
 }
@@ -200,12 +201,11 @@ tr:hover {
     background: rgba(0,0,0,0.06);
     -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
 }
-/* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
     border-radius: 3px;
     background: rgba(0,0,0,0.12);
     -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-}
+} */
 /*自定义滑动控件的轨道*/
 /* input[type=range]::-webkit-slider-runnable-track {
 	width: 100%;
@@ -216,27 +216,51 @@ tr:hover {
 	border-radius: 3.3px;
 	border: 0.2px solid rgba(1, 1, 1, 0);
 } */
-input[type=range]{
-	width: 556px;
-	height: 8px;
-	border-radius: 4px;
-	outline: none;
-	-webkit-appearance: none;/*清除系统默认样式*/
-	background-color: #7fddff;
+.noUi-target {
+	background: none !important;
+	height: auto !important;
+	margin-left: 5px;
+	margin-right: 5px;
 }
-/*自定义滑动控件的滑块*/
-input[type=range]::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	height:20px;/*拖动块高度*/
-	width: 20px;/*拖动块宽度*/
-	border-radius: 50px;
-	cursor: pointer;
-	/* margin-top: -3.5px; */
-	box-shadow:0 0 5px rgba(0,0,0,0.8);
-	background: url("/src/image/logo-G.png") no-repeat;
-	background-size: contain;
+.noUi-connect {
+	height: 6px !important;
+	border-radius: 3px !important;
+	background-color: #1e88e5 !important;
 }
 
+.noUi-base, 
+input[type=range]{
+	/* width: 556px; */
+	height: 6px !important;
+	border-radius: 3px;
+	outline: none !important;
+	-webkit-appearance: none;/*清除系统默认样式*/
+	background-color: #90caf9 !important;
+}
+/*自定义滑动控件的滑块*/
+.noUi-handle, 
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height:15px !important;/*拖动块高度*/
+	width: 15px !important;/*拖动块宽度*/
+	border-radius: 50px !important;
+	cursor: pointer !important;
+	/* margin-top: -3.5px; */
+	box-shadow:0 0 5px rgba(0,0,0,0.8) !important;
+	background: url("/src/image/logo-G.png") rgba(255,255,255,0.8) no-repeat !important;
+	background-size: contain !important;
+}
+
+.noUi-handle {
+	right: -8px !important;
+	border: none !important;
+}
+.noUi-handle::before {
+	content: none !important;
+}
+.noUi-handle::after {
+	content: none !important;
+}
 
 /*自定义滑动条获得焦点时的背景颜色*/
 /* input[type=range]:focus::-webkit-slider-runnable-track {
@@ -255,3 +279,21 @@ input[type=range]::-webkit-slider-thumb {
     display: flex;
     flex-direction: column; /* 如果需要垂直排列子元素 */
 }
+
+.slider-container {
+	display: flex;
+	align-items: center;
+	margin-left: 5%; 
+	margin-top: 2%; 
+	width: 90%;
+}
+
+.slider-container label {
+	margin-right: 5px;
+}
+
+.slider-container span {
+	margin-left: 5px;
+	white-space: nowrap;
+}
+
