--- a/templates/search.html
+++ b/templates/search.html
@@ -24,23 +24,18 @@
 				<!-- <img src="/src/image/search.png" style="order: -1; height: 38px;"> -->
 				<div class="card" style="height: 44px; width: 25%; border-top-left-radius: 24px; border-bottom-left-radius: 24px;">
 					<div id="scholar-field" class="card-body" style="padding-top: 10px; border-right: none;">
-						Visualization Scholar
+						{{ field }} Scholar
 					</div>
 				</div>
                 <input name="name" type="text" class="form-control" placeholder="Please enter the author's name" autofocus="" style="height: 44px; width: 60%; border-top-right-radius: 24px; border-bottom-right-radius: 24px;">
             </div>
-			<div class="form-check form-check-inline">
-				<input class="form-check-input radio" type="radio" name="field" value="visualization" checked>
-				<label class="form-check-label">Visualization</label>
-			</div>
-			<div class="form-check form-check-inline">
-				<input class="form-check-input radio" type="radio" name="field" value="acl">
-				<label class="form-check-label">NLP</label>
-			</div>
-			<br />
 			<br />
             <div style="display: inline;">
-                <a id="listLink" class="btn btn-primary" href="list/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">Scholar List</a>
+				{% if field %}
+                	<a id="listLink" class="btn btn-primary" href="/list/?field={{ field }}" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">Scholar List</a>
+				{% else %}
+					<a id="listLink" class="btn btn-primary" href="/list/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">Scholar List</a>
+				{% endif %}
 				<a id="searchLink" class="btn btn-primary" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">Scholar Search</a>
 				<script>
 					$("#listLink")
@@ -55,33 +50,30 @@
 			<a href=" " target="_blank">京ICP备2022000473号-2</a>
 		</form>
 		<script type="text/javascript">
-			// window.addEventListener('popstate', function(event) {
-			// 	// 页面回退时执行这段代码
-			// 	$("#listLink").attr("href", "list/?field=" + $(".radio").val());
-			// });
-			$(".radio").click(function() {
-				var field = $("input[name='field']:checked").val();
-				if (field == "visualization")
-					$("#scholar-field").text("Visualization Scholar");
-				else if (field == "acl")
-					$("#scholar-field").text("NLP Scholar");
-			});
-			$("#listLink").click(function(event) {
-				event.preventDefault();		// form表单当button在里面时，会默认发送GET请求
-				var field = $("input[name='field']:checked").val();
-				$("#error").empty();
-				// 当跳转失败停留在原页面时，url现在已经发生改变，
-				// 很奇怪的是此时不管发送什么请求window.location.href都会带上"list/"这个后缀，所以只能判断此时url是否包括它，包括就删去
-				if (window.location.href.includes("list/")) {
-					window.location.href = "?field=" + field;
-				}
-				else {
-					window.location.href = "list/?field=" + field;
-				}
-			})
+			// $("#listLink").click(function(event) {
+			// 	event.preventDefault();		// form表单当button在里面时，会默认发送GET请求
+			// 	var field = $("input[name='field']:checked").val();
+			// 	$("#error").empty();
+			// 	// 当跳转失败停留在原页面时，url现在已经发生改变，
+			// 	// 很奇怪的是此时不管发送什么请求window.location.href都会带上"list/"这个后缀，所以只能判断此时url是否包括它，包括就删去
+			//  if (window.location.href.includes("list/")) {
+			// 		window.location.href = "?field=" + field;
+			// 	}
+			// 	else {
+			// 		window.location.href = "list/?field=" + field;
+			// 	}
+			// })
+			var field = "{{ field }}";
+			if (field == '') {
+				$("#scholar-field").text("visualization Scholar");
+			}
+			else if (field == 'acl') {
+				$("#scholar-field").text("NLP Scholar");
+			} else {
+				$("#scholar-field").text(field + " Scholar");
+			}
 			$("#searchLink").click(function(event) {
 				event.preventDefault();
-				var field = $("input[name='field']:checked").val();
 					name = $(".form-control").val();
 				if (name == '') {
 					$("#error").text("Please input the name");
