--- a/templates/index.html
+++ b/templates/index.html
@@ -203,7 +203,7 @@
                         </ul>
                     </li>
                     <li>
-                        <div id="topic-map-graph">
+                        <div id="topic-map-graph" style="padding-bottom:4%">
                             <div id="topic-distribution"></div>
                             
                             <div class="slider-container">
@@ -393,7 +393,7 @@
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li id="timeline" style="overflow: auto; width: 90%; background-color: white; color: #333; margin-top: 3%; margin-bottom: 3%; margin-left: 6%;"></li>
+                            <li id="timeline" style="overflow: auto; width: 93%; background-color: white; color: #333; margin-top: 3%; margin-bottom: 3%; margin-left: 6%;"></li>
                         </ul>
                     </li>
                 </ul>
