--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,7 +192,7 @@ tr:hover {
 }
 
 /* 滚动槽 */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 6px;
     height: 6px;
 }
@@ -205,7 +205,7 @@ tr:hover {
     border-radius: 3px;
     background: rgba(0,0,0,0.12);
     -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-} */
+}
 /*自定义滑动控件的轨道*/
 /* input[type=range]::-webkit-slider-runnable-track {
 	width: 100%;
@@ -284,7 +284,8 @@ input[type=range]::-webkit-slider-thumb {
 	display: flex;
 	align-items: center;
 	margin-left: 5%; 
-	margin-top: 2%; 
+	/* margin-top: 1%;  */
+	margin-bottom: 2%; 
 	width: 90%;
 }
 
